--- a/site/public/chamado.html
+++ b/site/public/chamado.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../public/assets/img-site/logo_thermo-carry-2.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/img-site/logo_thermo-carry-2.png" type="image/x-icon" />
     <title>Chamados</title>
-    <link rel="stylesheet" href="../public/css/chamado-style.css">
+    <link rel="stylesheet" href="css/chamado-style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
             <div class="navbar">
                 <span><a href="notificacoes.html">Notificação</a></span>
                 <span><a href="chamado.html">Chamado</a></span>
-                <span><a href="../public/dashboard/index.html">Dashboard</a></span>
+                <span><a href="dashboard/index.html">Dashboard</a></span>
                 <span id="sair"><a href="TelaHome.html">Sair</a></span>
             </div>
         </div>
