--- a/site/public/notificacoes.html
+++ b/site/public/notificacoes.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../public/assets/img-site/logo_thermo-carry-2.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/img-site/logo_thermo-carry-2.png" type="image/x-icon" />
     <title>Notificações</title>
-    <link rel="stylesheet" href="../public/css/notificacao-style.css">
+    <link rel="stylesheet" href="css/notificacao-style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
             <div class="navbar">
                 <span><a href="notificacoes.html">Notificação</a></span>
                 <span><a href="chamado.html">Chamado</a></span>
-                <span><a href="../public/dashboard/index.html">Dashboard</a></span>
+                <span><a href="dashboard/index.html">Dashboard</a></span>
                 <span id="sair"><a href="TelaHome.html">Sair</a></span>
             </div>
         </div>
@@ -35,7 +35,7 @@
                     <strong> Caminhão de placa JU23L53</strong> |
                     <u>LOTE: TM123456789</u> &nbsp;
 
-                    <a id="ver_dashboard" href="../public/dashboard/index.html">Ver Dashboard</a>
+                    <a id="ver_dashboard" href="dashboard/index.html">Ver Dashboard</a>
 
                     <input type="button" id="fecha" onclick="fecha('teste')" value="X" />
                 </p>
@@ -44,12 +44,12 @@
             <!--Notificação laranja-->
             <div class="caixa_amarela" id="teste2" class="dragme">
                 <p>
-                    <img id="img-alerta" src="img-site/alerta.png""> &nbsp;
+                    <img id="img-alerta" src="img-site/alerta.png"> &nbsp;
                     <b>28 de Abril de 2022 |</b>
                     <strong> Caminhão de placa JU23L53</strong> |
                     <u>LOTE: TM123456789</u>&nbsp;
 
-                    <a id="ver_dashboard" href="../public/dashboard/index.html"">Ver Dashboard</a>
+                    <a id="ver_dashboard" href="dashboard/dashboard.html">Ver Dashboard</a>
 
                     <input type="button" id="fechar2" onclick="fechar2('teste')" value="X" />
                 </p>
@@ -63,7 +63,7 @@
                     <strong> Caminhão de placa JU23L53</strong> |
                     <u>LOTE: TM123456789</u> &nbsp;
 
-                    <a id="ver_dashboard" href="../public/dashboard/index.html"">Ver Dashboard</a>
+                    <a id="ver_dashboard" href="dashboard/index.html">Ver Dashboard</a>
 
                     <input type="button" id="fechar3" onclick="fechar3('teste')" value="X" />
                 </p>
