--- a/site/public/simulador.html
+++ b/site/public/simulador.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../public/assets/img-site/logo_thermo-carry-2.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/img-site/logo_thermo-carry-2.png" type="image/x-icon" />
     <title>Simulador</title>
     <link rel="stylesheet" href=".//css/simuladorestilo.css">
 </head>
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="../public/assets/img-site/logo_thermo-carry-2-escrita.png" alt="">
+                <img src="assets/img-site/logo_thermo-carry-2-escrita.png" alt="">
             </div>
             <ul class="navbar">
                 <li><a href="TelaHome.html">Home</a></li>
@@ -75,7 +75,7 @@
                 <a href="tel:+5511983326043">(xx)xxxx-xxxx</a>
             </div>
             <div class="logo_footer">
-                <img src="../public/assets/img-site/logo_thermo-carry-2.png" alt="">
+                <img src="assets/img-site/logo_thermo-carry-2.png" alt="">
                 <!-- <p>© 2022 ThermoCarry • Todos os direitos reservados •</p> DESISTO DE DEIXAR ESSA PORRA NO MEIO-->
             </div>
             <div class="redes_socias">
