--- a/site/public/dashboard/dashboard.html
+++ b/site/public/dashboard/dashboard.html
@@ -5,16 +5,10 @@
     <title>Dashboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="http://www.chartjs.org/dist/2.7.1/Chart.js"></script>
-    <script src="http://www.chartjs.org/samples/latest/utils.js"></script>
+    <!-- <script src="http://www.chartjs.org/samples/latest/utils.js"></script> -->
     <link rel="shortcut icon" href="img-site/logo_thermo-carry-2.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../css/dashboard-style.css">
     <style>
-        canvas {
-            -moz-user-select: none;
-            -webkit-user-select: none;
-            -ms-user-select: none;
-        }
     </style>
 </head>
 
@@ -95,7 +89,7 @@
                     </section> -->
                     <div class="grafico_p">
                         <section style="width: 100%;">
-                            <canvas id="lm35Temperatura"></canvas>
+                            <canvas id="lm35_temperatura"></canvas>
                         </section>
                     </div>
                 </div>
@@ -375,14 +369,14 @@ let proximaAtualizacao;
 
     window.onload = obterDadosGrafico(1);
 
-    b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
+    /* b_usuario.innerHTML = sessionStorage.NOME_USUARIO; */
 
-    verificar_autenticacao();
+    /* verificar_autenticacao(); */
 
-    function alterarTitulo(idLeitura) {
+/*     function alterarTitulo(id) {
         var tituloAquario = document.getElementById("tituloAquario")
-        tituloAquario.innerHTML = "Últimas medidas de Temperatura e Umidade do <span style='color: #e6005a'>Aquário " + idLeitura + "</span>"
-    }
+        tituloAquario.innerHTML = "Últimas medidas de Temperatura e Umidade do <span style='color: #e6005a'>Aquário " + id + "</span>"
+    } */
 
     // O gráfico é construído com três funções:
     // 1. obterDadosGrafico -> Traz dados do Banco de Dados para montar o gráfico da primeira vez
@@ -395,20 +389,20 @@ let proximaAtualizacao;
 
     //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
     //     Para ajustar o "select", ajuste o comando sql em src/models
-    function obterDadosGrafico(idLeitura) {
-        alterarTitulo(idLeitura)
+    function obterDadosGrafico(id) {
+        /* alterarTitulo(id) */
 
         if (proximaAtualizacao != undefined) {
             clearTimeout(proximaAtualizacao);
         }
 
-        fetch(`/medidas/ultimas/${idLeitura}`, { cache: 'no-store' }).then(function (response) {
+        fetch(`/medidas/ultimas/${id}`, { cache: 'no-store' }).then(function (response) {
             if (response.ok) {
                 response.json().then(function (resposta) {
                     console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
                     resposta.reverse();
 
-                    plotarGrafico(resposta, idLeitura);
+                    plotarGrafico(resposta, id);
                 });
             } else {
                 console.error('Nenhum dado encontrado ou erro na API');
@@ -422,20 +416,20 @@ let proximaAtualizacao;
     // Esta função *plotarGrafico* usa os dados capturados na função anterior para criar o gráfico
     // Configura o gráfico (cores, tipo, etc), materializa-o na página e, 
     // A função *plotarGrafico* também invoca a função *atualizarGrafico*
-    function plotarGrafico(resposta, idLeitura) {
+    function plotarGrafico(resposta, id) {
         console.log('iniciando plotagem do gráfico...');
 
         var dados = {
             labels: [],
             datasets: [
-                {
+/*                 {
                     yAxisID: 'y-umidade',
                     label: 'Umidade',
                     borderColor: '#32B9CD',
                     backgroundColor: '#32b9cd8f',
                     fill: true,
                     data: []
-                },
+                }, */
                 {
                     yAxisID: 'y-temperatura',
                     label: 'Temperatura',
@@ -450,13 +444,12 @@ let proximaAtualizacao;
         for (i = 0; i < resposta.length; i++) {
             var registro = resposta[i];
             dados.labels.push(registro.momento_grafico);
-            dados.datasets[0].data.push(registro.umidade);
-            dados.datasets[1].data.push(registro.temperatura);
+            dados.datasets[0].data.push(registro.lm35_temperatura);
         }
 
         console.log(JSON.stringify(dados));
 
-        var ctx = canvas_grafico.getContext('2d');
+        var ctx = lm35_temperatura.getContext('2d');
         window.grafico_linha = Chart.Line(ctx, {
             data: dados,
             options: {
@@ -479,7 +472,7 @@ let proximaAtualizacao;
                             max: 100,
                             min: 0
                         }
-                    }, {
+                    }, /* {
                         type: 'linear',
                         display: false,
                         position: 'right',
@@ -493,12 +486,12 @@ let proximaAtualizacao;
                         gridLines: {
                             drawOnChartArea: false,
                         },
-                    }],
+                    } */],
                 }
             }
         });
 
-        setTimeout(() => atualizarGrafico(idLeitura, dados), 2000);
+        setTimeout(() => atualizarGrafico(id, dados), 2000);
     }
 
 
@@ -507,9 +500,9 @@ let proximaAtualizacao;
 
     //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
     //     Para ajustar o "select", ajuste o comando sql em src/models
-    function atualizarGrafico(idLeitura, dados) {
+    function atualizarGrafico(id, dados) {
 
-        fetch(`/medidas/tempo-real/${idLeitura}`, { cache: 'no-store' }).then(function (response) {
+        fetch(`/medidas/tempo-real/${id}`, { cache: 'no-store' }).then(function (response) {
             if (response.ok) {
                 response.json().then(function (novoRegistro) {
 
@@ -520,21 +513,18 @@ let proximaAtualizacao;
                     dados.labels.shift(); // apagar o primeiro
                     dados.labels.push(novoRegistro[0].momento_grafico); // incluir um novo momento
                     
-                    dados.datasets[0].data.shift();  // apagar o primeiro de umidade
-                    dados.datasets[0].data.push(novoRegistro[0].umidade); // incluir uma nova medida de umidade
-                    
-                    dados.datasets[1].data.shift();  // apagar o primeiro de temperatura
-                    dados.datasets[1].data.push(novoRegistro[0].temperatura); // incluir uma nova medida de temperatura
+                    dados.datasets[0].data.shift();  // apagar o primeiro de temperatura
+                    dados.datasets[0].data.push(novoRegistro[0].lm35_temperatura); // incluir uma nova medida de temperatura
 
                     window.grafico_linha.update();
 
                     // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-                    proximaAtualizacao = setTimeout(() => atualizarGrafico(idLeitura, dados), 2000);
+                    proximaAtualizacao = setTimeout(() => atualizarGrafico(id, dados), 2000);
                 });
             } else {
                 console.error('Nenhum dado encontrado ou erro na API');
                 // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-                proximaAtualizacao = setTimeout(() => atualizarGrafico(idLeitura, dados), 2000);
+                proximaAtualizacao = setTimeout(() => atualizarGrafico(id, dados), 2000);
             }
         })
             .catch(function (error) {
