--- a/site/public/index.html
+++ b/site/public/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ThermoCarry</title>
-    <link rel="stylesheet" href="../public/css/home-style.css">
-    <link rel="shortcut icon" href="../public/assets/img-site/logo_thermo-carry-2.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/home-style.css">
+    <link rel="shortcut icon" href="/assets/img-site/logo_thermo-carry-2.png" type="image/x-icon" />
 </head>
 
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <img src="../public/assets/img-site/logo_thermo-carry-2-escrita.png" alt="">
+                <img src="assets/img-site/logo_thermo-carry-2-escrita.png" alt="">
 
             </div>
             <ul class="navbar">
@@ -90,7 +90,7 @@
                 <a href="tel:+5511983326043">(xx)xxxx-xxxx</a>
             </div> <!-- Substituir o numero depois -->
             <div class="logo_footer">
-                <img src="../public/assets/img-site/logo_thermo-carry-2.png" alt="">
+                <img src="assets/img-site/logo_thermo-carry-2.png" alt="">
                 <p>© 2022 ThermoCarry • Todos os direitos reservados •</p>
             </div>
             <div class="redes_socias">
