Atualizando o cadastro, deixando completamente funcional

--- a/site/public/login.html
+++ b/site/public/login.html
@@ -15,7 +15,7 @@
                 <img src="assets/img-site/logo_thermo-carry-2-escrita.png" alt="">
             </div>
             <ul class="navbar">
-                <li><a href="TelaHome.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
                 <li><a href="simulador.html">Simulador </a></li>
@@ -41,7 +41,7 @@
             </div>
             <div class="info">
                 <div class="texto">
-                    Nome: <input type="text" id="i_nome" placeholder="Insira o seu nome" style="height: 20px "> <br> <br>
+                    E-mail: <input type="text" id="i_nome" placeholder="Insira o seu nome" style="height: 20px "> <br> <br>
                     Senha: <input type="password" id="i_senha" placeholder="Insira sua senha" style="height: 20px"> <br> <br>
                     <div class="ancora"> <a href="#">Esqueceu a senha?</a> <br>
                         Não tem Cadastro? <a href="../Cadastro/cadastro.html"> cliquei aqui</a> <br> </div>
