--- a/site/public/index.html
+++ b/site/public/index.html
@@ -18,7 +18,7 @@
 
             </div>
             <ul class="navbar">
-                <li><a href="TelaHome.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
                 <li><a href="simulador.html">Simulador </a></li>
