--- a/site/public/simulador.html
+++ b/site/public/simulador.html
@@ -17,7 +17,7 @@
                 <img src="assets/img-site/logo_thermo-carry-2-escrita.png" alt="">
             </div>
             <ul class="navbar">
-                <li><a href="TelaHome.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
                 <li><a href="simulador.html">Simulador </a></li>
