Site na nuvem :)

--- a/site/public/dashboard/dashboard.html
+++ b/site/public/dashboard/dashboard.html
@@ -122,7 +122,7 @@
 </html>
 
 
- <!-- <script>
+<!-- <script>
     /* -- lm35Temperatura */
     var contextoLm35Temperatura = document.getElementById('lm35Temperatura').getContext('2d');
     contextoLm35Temperatura.canvas.width = 1000;
@@ -365,7 +365,7 @@
 </script> -->
 
 <script>
-let proximaAtualizacao;
+    let proximaAtualizacao;
 
     window.onload = obterDadosGrafico(1);
 
@@ -373,10 +373,10 @@ let proximaAtualizacao;
 
     /* verificar_autenticacao(); */
 
-/*     function alterarTitulo(id) {
-        var tituloAquario = document.getElementById("tituloAquario")
-        tituloAquario.innerHTML = "Últimas medidas de Temperatura e Umidade do <span style='color: #e6005a'>Aquário " + id + "</span>"
-    } */
+    /*     function alterarTitulo(id) {
+            var tituloAquario = document.getElementById("tituloAquario")
+            tituloAquario.innerHTML = "Últimas medidas de Temperatura e Umidade do <span style='color: #e6005a'>Aquário " + id + "</span>"
+        } */
 
     // O gráfico é construído com três funções:
     // 1. obterDadosGrafico -> Traz dados do Banco de Dados para montar o gráfico da primeira vez
@@ -422,14 +422,14 @@ let proximaAtualizacao;
         var dados = {
             labels: [],
             datasets: [
-/*                 {
-                    yAxisID: 'y-umidade',
-                    label: 'Umidade',
-                    borderColor: '#32B9CD',
-                    backgroundColor: '#32b9cd8f',
-                    fill: true,
-                    data: []
-                }, */
+                /*                 {
+                                    yAxisID: 'y-umidade',
+                                    label: 'Umidade',
+                                    borderColor: '#32B9CD',
+                                    backgroundColor: '#32b9cd8f',
+                                    fill: true,
+                                    data: []
+                                }, */
                 {
                     yAxisID: 'y-temperatura',
                     label: 'Temperatura',
@@ -445,6 +445,15 @@ let proximaAtualizacao;
             var registro = resposta[i];
             dados.labels.push(registro.momento_grafico);
             dados.datasets[0].data.push(registro.lm35_temperatura);
+        }
+
+
+        if (registro.lm35_temperatura <= -3 || registro.lm35_temperatura >= 13) {
+            alert('situação critica')
+        } else if (registro.lm35_temperatura <= -1 || registro.lm35_temperatura >= 11) {
+            alert('situação de emergencia')
+        } else if (registro.lm35_temperatura <= 1 || registro.lm35_temperatura >= 9) {
+            alert('situação de alerta')
         }
 
         console.log(JSON.stringify(dados));
@@ -512,13 +521,22 @@ let proximaAtualizacao;
                     // tirando e colocando valores no gráfico
                     dados.labels.shift(); // apagar o primeiro
                     dados.labels.push(novoRegistro[0].momento_grafico); // incluir um novo momento
-                    
+
                     dados.datasets[0].data.shift();  // apagar o primeiro de temperatura
                     dados.datasets[0].data.push(novoRegistro[0].lm35_temperatura); // incluir uma nova medida de temperatura
+
+                    if (novoRegistro[0].lm35_temperatura <= -3 || novoRegistro[0].lm35_temperatura >= 13) {
+                        alert('situação critica')
+                    } else if (novoRegistro[0].lm35_temperatura <= -1 || novoRegistro[0].lm35_temperatura >= 11) {
+                        alert('situação de emergencia')
+                    } else if (novoRegistro[0].lm35_temperatura <= 1 || novoRegistro[0].lm35_temperatura >= 9) {
+                        alert('situação de alerta')
+                    }
 
                     window.grafico_linha.update();
 
                     // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
+
                     proximaAtualizacao = setTimeout(() => atualizarGrafico(id, dados), 2000);
                 });
             } else {
