--- a/site/public/notificacoes.html
+++ b/site/public/notificacoes.html
@@ -18,7 +18,7 @@
             <div class="navbar">
                 <span><a href="notificacoes.html">Notificação</a></span>
                 <span><a href="chamado.html">Chamado</a></span>
-                <span><a href="dashboard/index.html">Dashboard</a></span>
+                <span><a href="dashboard/dashboard.html">Dashboard</a></span>
                 <span id="sair"><a href="TelaHome.html">Sair</a></span>
             </div>
         </div>
@@ -35,7 +35,7 @@
                     <strong> Caminhão de placa JU23L53</strong> |
                     <u>LOTE: TM123456789</u> &nbsp;
 
-                    <a id="ver_dashboard" href="dashboard/index.html">Ver Dashboard</a>
+                    <a id="ver_dashboard" href="dashboard/dashboard.html">Ver Dashboard</a>
 
                     <input type="button" id="fecha" onclick="fecha('teste')" value="X" />
                 </p>
@@ -63,7 +63,7 @@
                     <strong> Caminhão de placa JU23L53</strong> |
                     <u>LOTE: TM123456789</u> &nbsp;
 
-                    <a id="ver_dashboard" href="dashboard/index.html">Ver Dashboard</a>
+                    <a id="ver_dashboard" href="dashboard/dashboard.html">Ver Dashboard</a>
 
                     <input type="button" id="fechar3" onclick="fechar3('teste')" value="X" />
                 </p>
