--- a/site/public/chamado.html
+++ b/site/public/chamado.html
@@ -18,8 +18,8 @@
             <div class="navbar">
                 <span><a href="notificacoes.html">Notificação</a></span>
                 <span><a href="chamado.html">Chamado</a></span>
-                <span><a href="dashboard/index.html">Dashboard</a></span>
-                <span id="sair"><a href="TelaHome.html">Sair</a></span>
+                <span><a href="dashboard/dashboard.html">Dashboard</a></span>
+                <span id="sair"><a href="index.html">Sair</a></span>
             </div>
         </div>
 
@@ -33,7 +33,7 @@
                 Se necessário, diga também como gostaria que o problema fosse resolvido
                 e possíveis observações.</h2>
 
-            <button class="botao-chamado" onclick="abrir()">Abrir um Chamado</button>
+            <button class="botao-chamado" > <a href="https://app.pipefy.com/public/form/a5PO4OnI" target="_blank">Abrir um Chamado</a></button>
 
             <div id=div_chamado style="display:none">
 
