--- a/site/public/notificacoes.html
+++ b/site/public/notificacoes.html
@@ -19,7 +19,7 @@
                 <span><a href="notificacoes.html">Notificação</a></span>
                 <span><a href="chamado.html">Chamado</a></span>
                 <span><a href="dashboard/dashboard.html">Dashboard</a></span>
-                <span id="sair"><a href="TelaHome.html">Sair</a></span>
+                <span id="sair"><a href="index.html">Sair</a></span>
             </div>
         </div>
 
